--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "main-linkoshort",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "server.js",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "express": "^4.17.1",
+    "cors": "^2.8.5"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
